code/header/apis/steps_api.h



int api_get_hvdc_integer_data(size_t ibus, size_t jbus, char* identifier, char* side, char* parameter_name);

void api_set_hvdc_integer_data(size_t ibus, size_t jbus, char* identifier, char* side, char* parameter_name, int value);

double api_get_hvdc_float_data(size_t ibus, size_t jbus, char* identifier, char* side, char* parameter_name);

void api_set_hvdc_float_data(size_t ibus, size_t jbus, char* identifier, char* side, char* parameter_name, double value);

const char* api_get_hvdc_string_data(size_t ibus, size_t jbus, char* identifier, char* side, char* parameter_name);

void api_set_hvdc_string_data(size_t ibus, size_t jbus, char* identifier, char* side, char* parameter_name, char* value);

bool api_get_hvdc_boolean_data(size_t ibus, size_t jbus, char* identifier, char* side, char* parameter_name);

void api_set_hvdc_boolean_data(size_t ibus, size_t jbus, char* identifier, char* side, char* parameter_name, bool value);


int api_get_area_integer_data(size_t area, char* parameter_name);

void api_set_area_integer_data(size_t area, char* parameter_name, int value);

double api_get_area_float_data(size_t area, char* parameter_name);

void api_set_area_float_data(size_t area, char* parameter_name, double value);

const char* api_get_area_string_data(size_t area, char* parameter_name);

void api_set_area_string_data(size_t area, char* parameter_name, char* value);


int api_get_zone_integer_data(size_t zone, char* parameter_name);

void api_set_zone_integer_data(size_t zone, char* parameter_name, int value);

const char* api_get_zone_string_data(size_t zone, char* parameter_name);

void api_set_zone_string_data(size_t zone, char* parameter_name, char* value);


int api_get_owner_integer_data(size_t owner, char* parameter_name);

void api_set_owner_integer_data(size_t owner, char* parameter_name, int value);

const char* api_get_owner_string_data(size_t owner, char* parameter_name);

void api_set_owner_string_data(size_t owner, char* parameter_name, char* value);





void api_initialize_powerflow_solver();



size_t api_get_powerflow_solver_integer_parameter(char* parameter_name);

void api_set_powerflow_solver_integer_parameter(char* parameter_name, int value);

double api_get_powerflow_solver_float_parameter(char* parameter_name);

void api_set_powerflow_solver_float_parameter(char* parameter_name, double value);

bool api_get_powerflow_solver_boolean_parameter(char* parameter_name);

void api_set_powerflow_solver_boolean_parameter(char* parameter_name, bool value);


void api_solve_powerflow(char* method);

bool api_is_powerflow_converged();

void api_show_powerflow_result();

void api_save_powerflow_result(char* file);

void api_save_network_matrix(char* file);

void api_save_jacobian_matrix(char* file);




size_t api_get_dynamic_simulator_integer_parameter(char* parameter_name);

void api_set_dynamic_simulator_integer_parameter(char* parameter_name, int value);

double api_get_dynamic_simulator_float_parameter(char* parameter_name);

void api_set_dynamic_simulator_float_parameter(char* parameter_name, double value);

const char* api_get_dynamic_simulator_string_parameter(char* parameter_name);

void api_set_dynamic_simulator_string_parameter(char* parameter_name, char* value);

bool api_get_dynamic_simulator_boolean_parameter(char* parameter_name);

void api_set_dynamic_simulator_boolean_parameter(char* parameter_name, bool value);

void api_set_dynamic_simulator_output_file(char* file);

const char* api_get_dynamic_simulator_output_file();


void api_set_dynamic_simulation_time_step(double value);

double api_get_dynamic_simulation_time_step();


void api_prepare_meters();

void api_prepare_bus_related_meters();

void api_prepare_generator_related_meters();

void api_prepare_load_related_meters();

void api_prepare_line_related_meters();

void api_prepare_hvdc_related_meters();

void api_prepare_equivalent_device_related_meters();


void api_start_dynamic_simulation();

void api_stop_dynamic_simulation();

void api_run_simulation_to_time(double t_end);

void api_run_a_step();

void api_update_with_event();


void api_set_bus_fault(size_t bus, char* fault_type, double fault_G, double fault_B);

void api_clear_bus_fault(size_t bus, char* fault_type);

void api_trip_bus(size_t bus);


void api_set_line_fault(size_t ibus, size_t jbus, char* identifier, char* fault_type, double fault_location, double fault_G, double fault_B);

void api_clear_line_fault(size_t ibus, size_t jbus, char* identifier, char* fault_type, double fault_location);

void api_trip_line(size_t ibus, size_t jbus, char* identifier);

void api_trip_line_breaker(size_t ibus, size_t jbus, char* identifier);

void api_close_line(size_t ibus, size_t jbus, char* identifier);

void api_close_line_breaker(size_t ibus, size_t jbus, char* identifier);


void api_trip_transformer(size_t ibus, size_t jbus, size_t kbus, char* identifier);

void api_trip_transformer_breaker(size_t ibus, size_t jbus, size_t kbus, char* identifier);

void api_close_transformer(size_t ibus, size_t jbus, size_t kbus, char* identifier);

void api_close_transformer_breaker(size_t ibus, size_t jbus, size_t kbus, char* identifier);


void api_trip_generator(size_t bus, char* identifier);

void api_shed_generator(size_t bus, char* identifier, double percent);


void api_trip_load(size_t bus, char* identifier);

void api_close_load(size_t bus, char* identifier);

void api_scale_load(size_t bus, char* identifier, double percent);

void api_scale_all_loads(double percent);


void api_manually_bypass_hvdc(size_t ibus, size_t jbus, char* identifier);

void api_manually_unbypass_hvdc(size_t ibus, size_t jbus, char* identifier);

void api_manually_block_hvdc(size_t ibus, size_t jbus, char* identifier);

void api_manually_unblock_hvdc(size_t ibus, size_t jbus, char* identifier);


double api_get_generator_voltage_reference_in_pu(size_t bus, char* identifier);

double api_get_generator_power_reference_in_MW(size_t bus, char* identifier);


void api_set_generator_voltage_reference_in_pu(size_t bus, char* identifier, double value);

void api_set_generator_power_reference_in_MW(size_t bus, char* identifier, double value);