python/libsteps.py


libsteps.api_get_hvdc_integer_data.restype = (c_int)
libsteps.api_get_hvdc_integer_data.argtypes = (c_uint, c_uint, c_char_p, c_char_p, c_char_p)
libsteps.api_get_hvdc_float_data.restype = (c_double)
libsteps.api_get_hvdc_float_data.argtypes = (c_uint, c_uint, c_char_p, c_char_p, c_char_p)
libsteps.api_get_hvdc_string_data.restype = (c_char_p)
libsteps.api_get_hvdc_string_data.argtypes = (c_uint, c_uint, c_char_p, c_char_p, c_char_p)
libsteps.api_get_hvdc_boolean_data.restype = (c_bool)
libsteps.api_get_hvdc_boolean_data.argtypes = (c_uint, c_uint, c_char_p, c_char_p, c_char_p)
libsteps.api_set_hvdc_integer_data.restype = None
libsteps.api_set_hvdc_integer_data.argtypes = (c_uint, c_uint, c_char_p, c_char_p, c_char_p, c_int)
libsteps.api_set_hvdc_float_data.restype = None
libsteps.api_set_hvdc_float_data.argtypes = (c_uint, c_uint, c_char_p, c_char_p, c_char_p, c_double)
libsteps.api_set_hvdc_string_data.restype = None
libsteps.api_set_hvdc_string_data.argtypes = (c_uint, c_uint, c_char_p, c_char_p, c_char_p, c_char_p)
libsteps.api_set_hvdc_boolean_data.restype = None
libsteps.api_set_hvdc_boolean_data.argtypes = (c_uint, c_uint, c_char_p, c_char_p, c_char_p, c_bool)

libsteps.api_get_area_integer_data.restype = (c_int)
libsteps.api_get_area_integer_data.argtypes = (c_uint, c_char_p)
libsteps.api_get_area_float_data.restype = (c_double)
libsteps.api_get_area_float_data.argtypes = (c_uint, c_char_p)
libsteps.api_get_area_string_data.restype = (c_char_p)
libsteps.api_get_area_string_data.argtypes = (c_uint, c_char_p)
libsteps.api_set_area_integer_data.restype = None
libsteps.api_set_area_integer_data.argtypes = (c_uint, c_char_p, c_int)
libsteps.api_set_area_float_data.restype = None
libsteps.api_set_area_float_data.argtypes = (c_uint, c_char_p, c_double)
libsteps.api_set_area_string_data.restype = None
libsteps.api_set_area_string_data.argtypes = (c_uint, c_char_p, c_char_p)

libsteps.api_get_zone_integer_data.restype = (c_int)
libsteps.api_get_zone_integer_data.argtypes = (c_uint, c_char_p)
libsteps.api_get_zone_string_data.restype = (c_char_p)
libsteps.api_get_zone_string_data.argtypes = (c_uint, c_char_p)
libsteps.api_set_zone_integer_data.restype = None
libsteps.api_set_zone_integer_data.argtypes = (c_uint, c_char_p, c_int)
libsteps.api_set_zone_string_data.restype = None
libsteps.api_set_zone_string_data.argtypes = (c_uint, c_char_p, c_char_p)

libsteps.api_get_owner_integer_data.restype = (c_int)
libsteps.api_get_owner_integer_data.argtypes = (c_uint, c_char_p)
libsteps.api_get_owner_string_data.restype = (c_char_p)
libsteps.api_get_owner_string_data.argtypes = (c_uint, c_char_p)
libsteps.api_set_owner_integer_data.restype = None
libsteps.api_set_owner_integer_data.argtypes = (c_uint, c_char_p, c_int)
libsteps.api_set_owner_string_data.restype = None
libsteps.api_set_owner_string_data.argtypes = (c_uint, c_char_p, c_char_p)

libsteps.api_initialize_powerflow_solver.restype = None
libsteps.api_initialize_powerflow_solver.argtypes = None

libsteps.api_get_powerflow_solver_integer_parameter.restype = (c_uint)
libsteps.api_get_powerflow_solver_integer_parameter.argtypes = (c_char_p, )
libsteps.api_get_powerflow_solver_float_parameter.restype = (c_double)
libsteps.api_get_powerflow_solver_float_parameter.argtypes = (c_char_p, )
libsteps.api_get_powerflow_solver_boolean_parameter.restype = (c_bool)
libsteps.api_get_powerflow_solver_boolean_parameter.argtypes = (c_char_p ,)
libsteps.api_set_powerflow_solver_integer_parameter.restype = None
libsteps.api_set_powerflow_solver_integer_parameter.argtypes = (c_char_p, c_int)
libsteps.api_set_powerflow_solver_float_parameter.restype = None
libsteps.api_set_powerflow_solver_float_parameter.argtypes = (c_char_p, c_double)
libsteps.api_set_powerflow_solver_boolean_parameter.restype = None
libsteps.api_set_powerflow_solver_boolean_parameter.argtypes = (c_char_p, c_bool)

libsteps.api_solve_powerflow.restype = None
libsteps.api_solve_powerflow.argtypes = (c_char_p, )
libsteps.api_is_powerflow_converged.restype = (c_bool)
libsteps.api_is_powerflow_converged.argtypes = None
libsteps.api_show_powerflow_result.restype = None
libsteps.api_show_powerflow_result.argtypes = None
libsteps.api_save_powerflow_result.restype = None
libsteps.api_save_powerflow_result.argtypes = (c_char_p, )
libsteps.api_save_network_matrix.restype = None
libsteps.api_save_network_matrix.argtypes = (c_char_p, )
libsteps.api_save_jacobian_matrix.restype = None
libsteps.api_save_jacobian_matrix.argtypes = (c_char_p, )

libsteps.api_get_dynamic_simulator_integer_parameter.restype = (c_uint)
libsteps.api_get_dynamic_simulator_integer_parameter.argtypes = (c_char_p, )
libsteps.api_get_dynamic_simulator_float_parameter.restype = (c_double)
libsteps.api_get_dynamic_simulator_float_parameter.argtypes = (c_char_p, )
libsteps.api_get_dynamic_simulator_string_parameter.restype = (c_char_p)
libsteps.api_get_dynamic_simulator_string_parameter.argtypes = (c_char_p, )
libsteps.api_get_dynamic_simulator_boolean_parameter.restype = (c_bool)
libsteps.api_get_dynamic_simulator_boolean_parameter.argtypes = (c_char_p, )
libsteps.api_set_dynamic_simulator_integer_parameter.restype = None
libsteps.api_set_dynamic_simulator_integer_parameter.argtypes = (c_char_p, c_int)
libsteps.api_set_dynamic_simulator_float_parameter.restype = None
libsteps.api_set_dynamic_simulator_float_parameter.argtypes = (c_char_p, c_double)
libsteps.api_set_dynamic_simulator_string_parameter.restype = None
libsteps.api_set_dynamic_simulator_string_parameter.argtypes = (c_char_p, c_char_p)
libsteps.api_set_dynamic_simulator_boolean_parameter.restype = None
libsteps.api_set_dynamic_simulator_boolean_parameter.argtypes = (c_char_p, c_bool)
libsteps.api_get_dynamic_simulator_output_file.restype = (c_char_p)
libsteps.api_get_dynamic_simulator_output_file.argtypes = None
libsteps.api_set_dynamic_simulator_output_file.restype = None
libsteps.api_set_dynamic_simulator_output_file.argtypes = (c_char_p, )

libsteps.api_get_dynamic_simulation_time_step.restype = (c_double)
libsteps.api_get_dynamic_simulation_time_step.argtypes = None
libsteps.api_set_dynamic_simulation_time_step.restype = None
libsteps.api_set_dynamic_simulation_time_step.argtypes = (c_double, )

libsteps.api_prepare_meters.restype = None
libsteps.api_prepare_meters.argtypes = None
libsteps.api_prepare_bus_related_meters.restype = None
libsteps.api_prepare_bus_related_meters.argtypes = None
libsteps.api_prepare_generator_related_meters.restype = None
libsteps.api_prepare_generator_related_meters.argtypes = None
libsteps.api_prepare_load_related_meters.restype = None
libsteps.api_prepare_load_related_meters.argtypes = None
libsteps.api_prepare_line_related_meters.restype = None
libsteps.api_prepare_line_related_meters.argtypes = None
libsteps.api_prepare_hvdc_related_meters.restype = None
libsteps.api_prepare_hvdc_related_meters.argtypes = None
libsteps.api_prepare_equivalent_device_related_meters.restype = None
libsteps.api_prepare_equivalent_device_related_meters.argtypes = None

libsteps.api_start_dynamic_simulation.restype = None
libsteps.api_start_dynamic_simulation.argtypes = None
libsteps.api_stop_dynamic_simulation.restype = None
libsteps.api_stop_dynamic_simulation.argtypes = None
libsteps.api_run_simulation_to_time.restype = None
libsteps.api_run_simulation_to_time.argtypes = (c_double, )
libsteps.api_run_a_step.restype = None
libsteps.api_run_a_step.argtypes = None
libsteps.api_update_with_event.restype = None
libsteps.api_update_with_event.argtypes = None

libsteps.api_set_bus_fault.restype = None
libsteps.api_set_bus_fault.argtypes = (c_uint, c_char_p, c_double, c_double)
libsteps.api_clear_bus_fault.restype = None
libsteps.api_clear_bus_fault.argtypes = (c_uint, c_char_p)
libsteps.api_trip_bus.restype = None
libsteps.api_trip_bus.argtypes = (c_uint, )

libsteps.api_set_line_fault.restype = None
libsteps.api_set_line_fault.argtypes = (c_uint, c_uint, c_char_p, c_char_p, c_double, c_double, c_double)
libsteps.api_clear_line_fault.restype = None
libsteps.api_clear_line_fault.argtypes = (c_uint, c_uint, c_char_p, c_char_p, c_double)
libsteps.api_trip_line.restype = None
libsteps.api_trip_line.argtypes = (c_uint, c_uint, c_char_p)
libsteps.api_trip_line_breaker.restype = None
libsteps.api_trip_line_breaker.argtypes = (c_uint, c_uint, c_char_p)
libsteps.api_close_line.restype = None
libsteps.api_close_line.argtypes = (c_uint, c_uint, c_char_p)
libsteps.api_close_line_breaker.restype = None
libsteps.api_close_line_breaker.argtypes = (c_uint, c_uint, c_char_p)

libsteps.api_trip_transformer.restype = None
libsteps.api_trip_transformer.argtypes = (c_uint, c_uint, c_uint, c_char_p)
libsteps.api_trip_transformer_breaker.restype = None
libsteps.api_trip_transformer_breaker.argtypes = (c_uint, c_uint, c_uint, c_char_p)
libsteps.api_close_transformer.restype = None
libsteps.api_close_transformer.argtypes = (c_uint, c_uint, c_uint, c_char_p)
libsteps.api_close_transformer_breaker.restype = None
libsteps.api_close_transformer_breaker.argtypes = (c_uint, c_uint, c_uint, c_char_p)

libsteps.api_trip_generator.restype = None
libsteps.api_trip_generator.argtypes = (c_uint, c_char_p)
libsteps.api_shed_generator.restype = None
libsteps.api_shed_generator.argtypes = (c_uint, c_char_p, c_double)

libsteps.api_trip_load.restype = None
libsteps.api_trip_load.argtypes = (c_uint, c_char_p)
libsteps.api_close_load.restype = None
libsteps.api_close_load.argtypes = (c_uint, c_char_p)
libsteps.api_scale_load.restype = None
libsteps.api_scale_load.argtypes = (c_uint, c_char_p, c_double)
libsteps.api_scale_all_loads.restype = None
libsteps.api_scale_all_loads.argtypes = (c_double, )

libsteps.api_manually_bypass_hvdc.restype = None
libsteps.api_manually_bypass_hvdc.argtypes = (c_uint, c_uint, c_char_p)
libsteps.api_manually_unbypass_hvdc.restype = None
libsteps.api_manually_unbypass_hvdc.argtypes = (c_uint, c_uint, c_char_p)
libsteps.api_manually_block_hvdc.restype = None
libsteps.api_manually_block_hvdc.argtypes = (c_uint, c_uint, c_char_p)
libsteps.api_manually_unblock_hvdc.restype = None
libsteps.api_manually_unblock_hvdc.argtypes = (c_uint, c_uint, c_char_p)

libsteps.api_get_generator_voltage_reference_in_pu.restype = (c_double)
libsteps.api_get_generator_voltage_reference_in_pu.argtypes = (c_uint, c_char_p)
libsteps.api_set_generator_voltage_reference_in_pu.restype = None
libsteps.api_set_generator_voltage_reference_in_pu.argtypes = (c_uint, c_char_p, c_double)

libsteps.api_get_generator_power_reference_in_MW.restype = (c_double)
libsteps.api_get_generator_power_reference_in_MW.argtypes = (c_uint, c_char_p)
libsteps.api_set_generator_power_reference_in_MW.restype = None
libsteps.api_set_generator_power_reference_in_MW.argtypes = (c_uint, c_char_p, c_double)